# generic_once_cell

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: imp.rs  lib.rs
tests/: it.rs
